# Cursova-SP-calculator-2

./: CMakeLists.txt  calculator.cpp  main.cpp
